@@ -1,5 +1,12 @@
 2008-09-28  Jürg Billeter  <j@bitron.ch>
 
+	* vala/valatypeparameter.vala:
+	* vala/valatypesymbol.vala:
+
+	Remove unused array_types fields, patch by Marc-André Lureau
+
+2008-09-28  Jürg Billeter  <j@bitron.ch>
+
 	* vapi/glib-2.0.vapi:
 
 	Fix fopen and fdopen bindings, patch by Marc-André Lureau
